--- a/index.html
+++ b/index.html
@@ -36,7 +36,18 @@
         </div>
       </section>
 
-      
+      <section id="About" class="mt-20 flex flex-col items-center space-y-8">
+        <h2 class="text-2xl font-semibold text-white">About Me</h2>
+        <div class="text-white shadow-lg p-8 rounded-lg w-full max-w-4xl" style="background-color: #1f1f23">
+          <div class="grid grid-cols-1 md:grid-cols-2 gap-8 items-center">
+            <div class="space-y-4">
+              <p class="text-base"><span class="font-semibold">Name:</span> Suphawida Sadao</p>
+              <p class="text-base"><span class="font-semibold">Gender:</span> Female</p>
+              <p class="text-base"><span class="font-semibold">Age:</span> 20 years</p>
+              <p class="text-base"><span class="font-semibold">Nationality:</span> Thai</p>
+              <p class="text-base"><span class="font-semibold">Address:</span> Uthai Thani, Thailand</p>
+            </div>
+
     </div>
   </header>
 </body>
