--- a/index.html
+++ b/index.html
@@ -111,7 +111,23 @@
         </div>
       </section>
 
-      
+      <section id="contact" class="mt-28 flex flex-col items-center">
+        <h2 class="text-2xl font-semibold text-white mb-20">Contact</h2>
+        <div class="flex space-x-8">
+          <a href="https://www.facebook.com/vview.ssuphawida/?locale=th_TH" target="_blank" rel="noopener noreferrer" class="text-gray-300 hover:text-white transition duration-300">
+            <i class="fab fa-facebook text-3xl"></i>
+          </a>
+          <a href="https://x.com/@gboyyxie" target="_blank" rel="noopener noreferrer" class="text-gray-300 hover:text-white transition duration-300">
+            <i class="fab fa-twitter text-3xl"></i>
+          </a>
+          <a href="https://github.com/suphawidasadao" target="_blank" rel="noopener noreferrer" class="text-gray-300 hover:text-white transition duration-300">
+            <i class="fab fa-github text-3xl"></i>
+          </a>
+          <a href="https://www.instagram.com/viewwwwwwwwwwwwwwwwwwwwwwwwww/" target="_blank" rel="noopener noreferrer" class="text-gray-300 hover:text-white transition duration-300">
+            <i class="fab fa-instagram text-3xl"></i>
+          </a>
+        </div>
+      </section>
     </div>
   </header>
 </body>
